# joblib-zstd

./: .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylintrc  README.md  pyproject.toml
.github/workflows/: test.yaml
joblib_zstd/: __init__.py  file.py  wrapper.py
tests/: test_zstd.py
