[tool.poetry]
name = "joblib-zstd"
version = "0.1.1"
description = "Add Zstandard compression/decompression functionality for joblib"
authors = ["Hiroyuki Tanaka <aflc0x@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/roy-ht/joblib-zstd'
keywords = ['joblib', 'Zstandard']


[tool.poetry.dependencies]
python = "^3.5"
joblib = "*"
zstandard = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py35"]
